--- a/instagram16.html
+++ b/instagram16.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000121.jpg" title="My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000121.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000558.jpg" title="#sockdoping game was strong today...#cycling #bicycle #coffeeride #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#sockdoping game was strong today...#cycling #bicycle #coffeeride #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000558.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000559.jpg" title="#lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000559.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000560.jpg" title="Glorious, sunny morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Glorious, sunny morning. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000560.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000561.jpg" title="Sunrise coffee rides. #lovestarfactoryteam #bicycle #cycling #coffeeride" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Riding bikes is the best when you ride with great people . . . and their shadows #lovestarbicyclebags #yodacento</small>
                            </div>
                            <img src="../lsphotos/image000122.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000573.jpg" title="#lovestarfactoryteam #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#lovestarfactoryteam #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000573.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000123.jpg" title="Now that was a donut. #donutride #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Now that was a donut. #donutride #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000123.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000574.jpg" title="#cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#cycling #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000574.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000575.jpg" title="Kenosha bound. #bicycle #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Kenosha bound. #bicycle #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000575.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
