--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000573.jpg" title="#lovestarfactoryteam #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000573.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000123.jpg" title="Now that was a donut. #donutride #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Now that was a donut. #donutride #cycling #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000123.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000574.jpg" title="#cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#cycling #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000574.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000575.jpg" title="Kenosha bound. #bicycle #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Kenosha bound. #bicycle #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000575.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000124.jpg" title="Early rides with @elliotlovestarbicycles always take time to take in beautiful places #lovestarbicyclebags #myparlee #nofilter" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -207,62 +259,6 @@
                               <small>Staged and ready for tomorrow's #almanzo100 ...you know you're in for a good day when your bikes get all muddy just driving to the race start. #cycling #gravelgrinder #bicycle #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000582.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000583.jpg" title="Obligatory pre-race caravan photo. Rolling out to the #almanzo100 this weekend. #lovestarfactoryteam #cycling #bicycle #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Obligatory pre-race caravan photo. Rolling out to the #almanzo100 this weekend. #lovestarfactoryteam #cycling #bicycle #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000583.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000584.jpg" title="It's Wednesday, time to dream up a ROUTT for the weekend. Long ride or short ride, it's all an adventure. #Repost @elliotlovestarbicycles with @repostapp.
-・・・
-So many cool #fog photos this morning... #cycling #moots #bicycle #lovestarfactoryteam #lakemichigan #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>mootscycles</h4>
-                              <small>It's Wednesday, time to dream up a ROUTT for the weekend. Long ride or short ride, it's all an adventure. #Repost @elliotlovestarbicycles with @repostapp.
-・・・
-So many cool #fog photos this morning... #cycling #moots #bicycle #lovestarfactoryteam #lakemichigan #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000584.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000585.jpg" title="&quot;...The grey rain-curtain of this world rolls back, and all turns to silver glass, and then you see it...White shores, and beyond, a far green country under a swift sunrise.&quot; #cycling #tolkien #bicycle #moots #lovestarfactoryteam #lakemichigan #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>"...The grey rain-curtain of this world rolls back, and all turns to silver glass, and then you see it...White shores, and beyond, a far green country under a swift sunrise." #cycling #tolkien #bicycle #moots #lovestarfactoryteam #lakemichigan #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000585.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000133.jpg" title="Just another day at the disco with extra fog machine. PC: @elliotlovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Just another day at the disco with extra fog machine. PC: @elliotlovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000133.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
