--- a/instagram26.html
+++ b/instagram26.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000222.jpg" title="Handsome pair of #lovestarbicyclebags went out the door today. #handmade #bicyclebag #bikepackingbags #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Handsome pair of #lovestarbicyclebags went out the door today. #handmade #bicyclebag #bikepackingbags #bikepacking #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000222.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000223.jpg" title="Finished up this blue Cordura #lovestarbicyclebags top tube bag. Part of a matching set heading out to a customer tomorrow! #bikepackingbags #handmade #bicyclebag #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this blue Cordura #lovestarbicyclebags top tube bag. Part of a matching set heading out to a customer tomorrow! #bikepackingbags #handmade #bicyclebag #bikepacking #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000223.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000224.jpg" title="XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000224.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000225.jpg" title="Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000225.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000226.jpg" title="Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Tried my hand at the Master 35+ category today. These guys are good! Had a brutal first lap which included crashing at the barriers. #lovestarfactoryteam #lsb #IRLcx</small>
                            </div>
                            <img src="../lsphotos/image000660.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000661.jpg" title="Sunrise team ride. #lovestarfactoryteam #cycling #bicycle #cylist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise team ride. #lovestarfactoryteam #cycling #bicycle #cylist</small>
-                           </div>
-                           <img src="../lsphotos/image000661.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000662.jpg" title="Another great day of racing. We are getting so spoiled with these beautiful Sundays. 9th place today. #PSIcx #lsb #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Another great day of racing. We are getting so spoiled with these beautiful Sundays. 9th place today. #PSIcx #lsb #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000662.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000663.jpg" title="Sigh...winter kit came out today. #cycling #lovestarfactoryteam #championsystem #bicycle #cylist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sigh...winter kit came out today. #cycling #lovestarfactoryteam #championsystem #bicycle #cylist</small>
-                           </div>
-                           <img src="../lsphotos/image000663.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000664.jpg" title="Chilly, but all smiles this morning. #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chilly, but all smiles this morning. #lovestarfactoryteam #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000664.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
