--- a/instagram27.html
+++ b/instagram27.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000661.jpg" title="Sunrise team ride. #lovestarfactoryteam #cycling #bicycle #cylist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise team ride. #lovestarfactoryteam #cycling #bicycle #cylist</small>
+                           </div>
+                           <img src="../lsphotos/image000661.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000662.jpg" title="Another great day of racing. We are getting so spoiled with these beautiful Sundays. 9th place today. #PSIcx #lsb #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Another great day of racing. We are getting so spoiled with these beautiful Sundays. 9th place today. #PSIcx #lsb #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000662.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000663.jpg" title="Sigh...winter kit came out today. #cycling #lovestarfactoryteam #championsystem #bicycle #cylist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sigh...winter kit came out today. #cycling #lovestarfactoryteam #championsystem #bicycle #cylist</small>
+                           </div>
+                           <img src="../lsphotos/image000663.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000664.jpg" title="Chilly, but all smiles this morning. #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Chilly, but all smiles this morning. #lovestarfactoryteam #cycling #bicycle #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000664.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000665.jpg" title="Sunrise ride with the crew this morning. #lovestarfactoryteam #cycling #cylist #bicycle #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Managed my first podium finish today - in the rain and mud no less. Great times with #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000672.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000673.jpg" title="#lovestarfactoryteam on the podium! Congrats to @ddave12000 on his huge effort today! #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam on the podium! Congrats to @ddave12000 on his huge effort today! #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000673.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000674.jpg" title="#babysnub crushin' the barriers. #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub crushin' the barriers. #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000674.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000675.jpg" title="Racin' #lovestarfactoryteam #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Racin' #lovestarfactoryteam #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000675.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000676.jpg" title="Muddy race today. #lovestarfactoryteam had a day with some extreme highs and lows. Several top 10 finishes from our juniors team and our full sized squad. But we had one team mate leave in an ambulance. Wishing him well and hoping for a speedy recovery. Thanks to @highergearbikes for putting on a great race! #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Muddy race today. #lovestarfactoryteam had a day with some extreme highs and lows. Several top 10 finishes from our juniors team and our full sized squad. But we had one team mate leave in an ambulance. Wishing him well and hoping for a speedy recovery. Thanks to @highergearbikes for putting on a great race! #cyclocross #cx #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000676.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
