--- a/instagram41.html
+++ b/instagram41.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000412.jpg" title="Fixing a flat in the middle of the woods...beautiful ride on the #DPRT today with the Lovestar Factory Team #cycling #cyclocross #lovestarbicyclebags #lovestarbicycles #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fixing a flat in the middle of the woods...beautiful ride on the #DPRT today with the Lovestar Factory Team #cycling #cyclocross #lovestarbicyclebags #lovestarbicycles #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000412.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000413.jpg" title="Nap time roller sessions. #dadlife #cycling #cyclocross #bikechi #lovestarbicyclebags #lovestarbicycles #rollers #training" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Nap time roller sessions. #dadlife #cycling #cyclocross #bikechi #lovestarbicyclebags #lovestarbicycles #rollers #training</small>
+                           </div>
+                           <img src="../lsphotos/image000413.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000414.jpg" title="Ok...I fully admit that I am addicted to accessorizing my bike kit...but it's just so good. #cycling #cyclocross #lovestarbicycles #lovestarbicyclebags #championsystem #defeet #lazersport #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ok...I fully admit that I am addicted to accessorizing my bike kit...but it's just so good. #cycling #cyclocross #lovestarbicycles #lovestarbicyclebags #championsystem #defeet #lazersport #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000414.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000415.jpg" title="First real ride since my injury. Ride home from work. 35 degrees, dark, and 100% delightful. #bikechi #lovestarbicyclebags #lovestarbicycles #bikecommute #nightride #moots #cyclocross #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First real ride since my injury. Ride home from work. 35 degrees, dark, and 100% delightful. #bikechi #lovestarbicyclebags #lovestarbicycles #bikecommute #nightride #moots #cyclocross #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000415.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000416.jpg" title="New bike kicks! #giroempire #cycliing #cyclocross #lovestarbicycles #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000431.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000432.jpg" title="Grassy hill repeats & barrier practice for tonight's ride. #cyclocross #cycling #moots #psychloX #barriers #lovestarbicycles #lovestarbicyclebags #bikechi #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Grassy hill repeats & barrier practice for tonight's ride. #cyclocross #cycling #moots #psychloX #barriers #lovestarbicycles #lovestarbicyclebags #bikechi #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000432.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000433.jpg" title="Finished up the sister bag to last nights post. 2 custom Saddle Packs going out this week. #handmade #bikebag #bikechi #bikepacking #bicycle #madeinchicago #cycling #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up the sister bag to last nights post. 2 custom Saddle Packs going out this week. #handmade #bikebag #bikechi #bikepacking #bicycle #madeinchicago #cycling #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000433.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000434.jpg" title="Custom Grey & Black SaddlePack with Red interior and a couple of Red highlights. #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikebag #bikechi #madeinchicago #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom Grey & Black SaddlePack with Red interior and a couple of Red highlights. #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikebag #bikechi #madeinchicago #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000434.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000435.jpg" title="Pair of custom SaddlePacks in the works. #lovestarbicycles #lovestarbicyclebags #cycling #bikepacking #bikechi #bikebag #bicycle #handmade #madeinchicago" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pair of custom SaddlePacks in the works. #lovestarbicycles #lovestarbicyclebags #cycling #bikepacking #bikechi #bikebag #bicycle #handmade #madeinchicago</small>
-                           </div>
-                           <img src="../lsphotos/image000435.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
