--- a/instagram44.html
+++ b/instagram44.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000471.jpg" title="Orange and Dark Grey custom Lovestar framebag for a Novara mountain bike.  #lovestarbicyclebags #bicycle #bikechi #bicyclebag #bikepacking #bikecamping #cycling #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Orange and Dark Grey custom Lovestar framebag for a Novara mountain bike.  #lovestarbicyclebags #bicycle #bikechi #bicyclebag #bikepacking #bikecamping #cycling #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000471.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000472.jpg" title="Finished with fabrication for this custom framebag... Time to begin construction! #handmade #cycling  #lovestarbicyclebags #bicyclebag #bikechi #bikepacking #bikecamping" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished with fabrication for this custom framebag... Time to begin construction! #handmade #cycling  #lovestarbicyclebags #bicyclebag #bikechi #bikepacking #bikecamping</small>
+                           </div>
+                           <img src="../lsphotos/image000472.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000473.jpg" title="Custom Lovestar framebag in the works...lots of orange! #handmade #bicycle #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Lovestar framebag in the works...lots of orange! #handmade #bicycle #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000473.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000474.jpg" title="Set up a temporary workspace on vacation. Cranked out this lime-green & black Saddle Pack tonight. #lovestarbicyclebags #cycling #handmade #bicycle #bikechi #singersewingmachines #vacationprojects" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Set up a temporary workspace on vacation. Cranked out this lime-green & black Saddle Pack tonight. #lovestarbicyclebags #cycling #handmade #bicycle #bikechi #singersewingmachines #vacationprojects</small>
+                           </div>
+                           <img src="../lsphotos/image000474.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000475.jpg" title="There's more than one way to prove how much you've been riding. #cycling #bikechi #lovestarbicyclebags #coffeerides" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Chilly rides deserve warm drinks. #lovestarbicyclebags #airattack #cycling #bikechi #espresso</small>
                            </div>
                            <img src="../lsphotos/image000490.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000491.jpg" title="Flower power...meet pedal power. #lovestarbicyclebags #bikechi #cycling #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Flower power...meet pedal power. #lovestarbicyclebags #bikechi #cycling #moots</small>
-                           </div>
-                           <img src="../lsphotos/image000491.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000492.jpg" title="Pink & Neon Lime racing stripes on a black XPac Lovestar Saddle Pack. Neon Lime interior #lovestarbicyclebags #handmade #bikechi #cycling #racingstripesmakeyoufaster" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pink & Neon Lime racing stripes on a black XPac Lovestar Saddle Pack. Neon Lime interior #lovestarbicyclebags #handmade #bikechi #cycling #racingstripesmakeyoufaster</small>
-                           </div>
-                           <img src="../lsphotos/image000492.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000493.jpg" title="Sometimes you learn more about yourself in defeat than in victory. I had planned on racing the 63 mile route today but I just wasn't prepared mentally for the race today. Punishing winds broke me open & I just couldn't finish my planned route. I finished the shorter 35 mile route, but felt brutalize the entire way. i had debated about even racing today - it had been a long weekend away from my family, and that isn't a great place to be when you step up to the start line. overall it was a great learning experience and a humbling ride. #wind #gravel #gravelgrinder #lovestarbicyclebags #vbscx #toughmuddr #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sometimes you learn more about yourself in defeat than in victory. I had planned on racing the 63 mile route today but I just wasn't prepared mentally for the race today. Punishing winds broke me open & I just couldn't finish my planned route. I finished the shorter 35 mile route, but felt brutalize the entire way. i had debated about even racing today - it had been a long weekend away from my family, and that isn't a great place to be when you step up to the start line. overall it was a great learning experience and a humbling ride. #wind #gravel #gravelgrinder #lovestarbicyclebags #vbscx #toughmuddr #moots</small>
-                           </div>
-                           <img src="../lsphotos/image000493.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000494.jpg" title="Loaded and off to the Dirty Muddr Gravel road race...Which is looking like it will live up to its name. #gravel #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Loaded and off to the Dirty Muddr Gravel road race...Which is looking like it will live up to its name. #gravel #moots #lovestarbicyclebags #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000494.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
