--- a/instagram8.html
+++ b/instagram8.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000795.jpg" title="With the unusually mild weather today the roads dried up so I took the new whip for an outdoor spin this afternoon. A few tweaks to the fit and she'll be ready to crush gravel this spring! Thanks again @ponylou ! #lovestarraceclub #superx #forcecx1" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>With the unusually mild weather today the roads dried up so I took the new whip for an outdoor spin this afternoon. A few tweaks to the fit and she'll be ready to crush gravel this spring! Thanks again @ponylou ! #lovestarraceclub #superx #forcecx1</small>
+                           </div>
+                           <img src="../lsphotos/image000795.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000793.jpg" title="Happy Place. #festive500 #fatbike #cycling #bicycle #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Place. #festive500 #fatbike #cycling #bicycle #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000793.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000794.jpg" title="&quot;It is unthinkable darkness riven with unbearable light.&quot; #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>"It is unthinkable darkness riven with unbearable light." #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000794.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000792.jpg" title="Christmas Eve commute 🚲❄️#fatbike #bicycle #snowbike #lovestarbicyclebags #bikepacking #festive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Christmas Eve commute 🚲❄️#fatbike #bicycle #snowbike #lovestarbicyclebags #bikepacking #festive500</small>
+                           </div>
+                           <img src="../lsphotos/image000792.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000791.jpg" title="Cold Sunrise #fatbike #cycling #bicycle #snowbike #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000775.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000774.jpg" title="Fresh dusting of snow. Definitely time to put on the studded tires. #fatbike #cycling #bicycle #snowbike #bikepacking #LovestarBicycleBags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fresh dusting of snow. Definitely time to put on the studded tires. #fatbike #cycling #bicycle #snowbike #bikepacking #LovestarBicycleBags</small>
-                           </div>
-                           <img src="../lsphotos/image000774.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000773.jpg" title="#myparlee looks like summer.  Me, not so much.  Subzero wind chills made this a challenging ride but big thanks to @elliotlovestarbicycles for toughening me up and getting me closer to my goals #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>#myparlee looks like summer.  Me, not so much.  Subzero wind chills made this a challenging ride but big thanks to @elliotlovestarbicycles for toughening me up and getting me closer to my goals #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000773.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000772.jpg" title="First ice beard of the season. #cycling #bicycle #lovestarbicyclebags #icebeard" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First ice beard of the season. #cycling #bicycle #lovestarbicyclebags #icebeard</small>
-                           </div>
-                           <img src="../lsphotos/image000772.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000767.jpg" title="Sleigh rides. #fatbike #bicycle #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sleigh rides. #fatbike #bicycle #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000767.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
