--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000056.jpg" title="Before and After of our captain getting heckled by an 11 yr old and coming out all smiles during #labaghcx today. CX is fun #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Before and After of our captain getting heckled by an 11 yr old and coming out all smiles during #labaghcx today. CX is fun #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000056.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000099.jpg" title="Thank you @elliotlovestarbicycles for rebuilding @dustinbennettproducer bike! What an awesome job!!!! You'd never know that bike is 20+ years old. The custom Lovestar bag is the perfect finishing touch!! #custombikes #custombikebags #lovestarbicycles #cycling #bikes #lovestarbicyclebags #lovestar #elliotlovestarbicycle #brothers #bestsonsever #bestbuddies" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Thank you @elliotlovestarbicycles for rebuilding @dustinbennettproducer bike! What an awesome job!!!! You'd never know that bike is 20+ years old. The custom Lovestar bag is the perfect finishing touch!! #custombikes #custombikebags #lovestarbicycles #cycling #bikes #lovestarbicyclebags #lovestar #elliotlovestarbicycle #brothers #bestsonsever #bestbuddies</small>
+                           </div>
+                           <img src="../lsphotos/image000099.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000100.jpg" title="Flashy blaze orange interior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Flashy blaze orange interior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000100.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000101.jpg" title="Grey & Black #LovestarBicycleBags SaddlePack finished up and headed to Florida tomorrow. #handmade #bicyclebag #bicycle #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Grey & Black #LovestarBicycleBags SaddlePack finished up and headed to Florida tomorrow. #handmade #bicyclebag #bicycle #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000101.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000057.jpg" title="Waking up in the dark to ride everyday can be tough...but I never get tired of sunrises over the Lake #bikechi #lakemichigan #bicycle #cycling #bike #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Why drive when you can ride? #lovestarraceclub #cycling</small>
                            </div>
                            <img src="../lsphotos/image000071.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000072.jpg" title="Day 2. @elliotlovestarbicycles Mt. Hood bike packing adventure. View from Surveyors Ridge. #bikecamping #bikepacking #mthood #fatbike #adventurebike #lovestarbicyclebags #custombikebags #lovestarraceclub #lovestarbicyclebags #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Day 2. @elliotlovestarbicycles Mt. Hood bike packing adventure. View from Surveyors Ridge. #bikecamping #bikepacking #mthood #fatbike #adventurebike #lovestarbicyclebags #custombikebags #lovestarraceclub #lovestarbicyclebags #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000072.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000106.jpg" title="Mount Hood. #bikepacking #bikecamping #mthood #fatbike #bicycle #adventurebike #cycling #mtb #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mount Hood. #bikepacking #bikecamping #mthood #fatbike #bicycle #adventurebike #cycling #mtb #handmade #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000106.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000107.jpg" title="Day 1 in the back country and things are already getting a bit Lord of the Flies out here. #lovestarbicyclebags #bicycle #mthood #fatbike #cycling #bikepacking #bikecamping" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Day 1 in the back country and things are already getting a bit Lord of the Flies out here. #lovestarbicyclebags #bicycle #mthood #fatbike #cycling #bikepacking #bikecamping</small>
-                           </div>
-                           <img src="../lsphotos/image000107.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000108.jpg" title="28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image000108.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
