--- a/instagram28.html
+++ b/instagram28.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000673.jpg" title="#lovestarfactoryteam on the podium! Congrats to @ddave12000 on his huge effort today! #cyclocross #cx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam on the podium! Congrats to @ddave12000 on his huge effort today! #cyclocross #cx</small>
+                           </div>
+                           <img src="../lsphotos/image000673.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000674.jpg" title="#babysnub crushin' the barriers. #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub crushin' the barriers. #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000674.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000675.jpg" title="Racin' #lovestarfactoryteam #cyclocross #cx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Racin' #lovestarfactoryteam #cyclocross #cx</small>
+                           </div>
+                           <img src="../lsphotos/image000675.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000676.jpg" title="Muddy race today. #lovestarfactoryteam had a day with some extreme highs and lows. Several top 10 finishes from our juniors team and our full sized squad. But we had one team mate leave in an ambulance. Wishing him well and hoping for a speedy recovery. Thanks to @highergearbikes for putting on a great race! #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Muddy race today. #lovestarfactoryteam had a day with some extreme highs and lows. Several top 10 finishes from our juniors team and our full sized squad. But we had one team mate leave in an ambulance. Wishing him well and hoping for a speedy recovery. Thanks to @highergearbikes for putting on a great race! #cyclocross #cx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000676.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000677.jpg" title="#lovestarfactoryteam on the under-3yo podium!! #babysnub #cyclocross #cx #cylist" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>One more... #lovestarbicyclebags #bikepacking #cycling #handmade #sewrad</small>
                            </div>
                            <img src="../lsphotos/image000087.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000248.jpg" title="Still working on this prototype feed bag...but I'm getting so stoked about it, I had to share an in-progress shot. #lovestarbicyclebags #handmade #bikepacking #cycling #fatbike #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Still working on this prototype feed bag...but I'm getting so stoked about it, I had to share an in-progress shot. #lovestarbicyclebags #handmade #bikepacking #cycling #fatbike #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000248.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000249.jpg" title="Two days of sick kids...it was nice to start a project again. Pockets are always exciting. #lovestarbicyclebags #handmade #custom #bicyclebag #bikepacking #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Two days of sick kids...it was nice to start a project again. Pockets are always exciting. #lovestarbicyclebags #handmade #custom #bicyclebag #bikepacking #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000249.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000683.jpg" title="Flyover! #lovestarfactoryteam #cyclocross #HopkinsCX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Flyover! #lovestarfactoryteam #cyclocross #HopkinsCX</small>
-                           </div>
-                           <img src="../lsphotos/image000683.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000684.jpg" title="Fighting through the corners. #lovestarfactoryteam #HopkinsCX #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fighting through the corners. #lovestarfactoryteam #HopkinsCX #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000684.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
