--- a/instagram31.html
+++ b/instagram31.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000703.jpg" title="#lovestarfactoryteam cyclocross season kickoff today with the xXx relay #cx race! #cycling #cyclocross #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam cyclocross season kickoff today with the xXx relay #cx race! #cycling #cyclocross #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000703.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000267.jpg" title="'Murica. #fatbike #cycling #flashbackFriday #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>'Murica. #fatbike #cycling #flashbackFriday #lovestarbicyclebags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000267.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000268.jpg" title="Fat Commute. #fatbikefriday #fatbike #fattieshavemorefun #bikechi #cycling #bicycle #lovestarbicyclebags #lovestarfactoryteam #bikepacking #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat Commute. #fatbikefriday #fatbike #fattieshavemorefun #bikechi #cycling #bicycle #lovestarbicyclebags #lovestarfactoryteam #bikepacking #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000268.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000704.jpg" title="Water bottle drills, hill repeats, barrier practice, sprints...twilight #lovestarfactoryteam cross practice...because cross really is coming. #cx #cyclocross #crossiscoming #strava #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Water bottle drills, hill repeats, barrier practice, sprints...twilight #lovestarfactoryteam cross practice...because cross really is coming. #cx #cyclocross #crossiscoming #strava #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000704.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000705.jpg" title="Family ride! #adventuredad #fatbike #striderbikes #lovestarfactoryteam #cycling #bicycle #bikechi #NorthBranchTrail" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -215,58 +267,6 @@ Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicycl
                               <small>Recalling every #zombie movie ever... #fatbike #adventurebike #bikechi #bikepacking #lovestarbicyclebags #cycling #bicycle #bikecommute</small>
                            </div>
                            <img src="../lsphotos/image000274.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000275.jpg" title="Not too bad for a morning commute... #fatbike #cycling #bikechi #bikecommute #bikepacking #bicyclebag #framebag #gravelgrinder #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Not too bad for a morning commute... #fatbike #cycling #bikechi #bikecommute #bikepacking #bicyclebag #framebag #gravelgrinder #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000275.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000714.jpg" title="Sunrise vibes. #lovestarfactoryteam #cycling #cyclist #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise vibes. #lovestarfactoryteam #cycling #cyclist #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000714.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000715.jpg" title="Been a rad summer for gravel so far...but really starting to get stoked about cross season... #crossiscoming #cyclocross #gravel #gravelgrinder #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Been a rad summer for gravel so far...but really starting to get stoked about cross season... #crossiscoming #cyclocross #gravel #gravelgrinder #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000715.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000716.jpg" title="Only had time for a quick flyby at the @velosmith Rapha Mobile Cycle Club event this morning. Still, any ride is better than no ride. Thanks to Velosmith and @rapha_tillie for the coffee and donuts! #velosmith #rapha #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Only had time for a quick flyby at the @velosmith Rapha Mobile Cycle Club event this morning. Still, any ride is better than no ride. Thanks to Velosmith and @rapha_tillie for the coffee and donuts! #velosmith #rapha #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000716.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
