--- a/instagram35.html
+++ b/instagram35.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000741.jpg" title="#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000741.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000308.jpg" title="The whole #lovestarbicyclebags family out for a lakefront ride tonight! #adventuredad #futurecyclist #babysnub #striderbikes #bicycle #cycling #thulechariot #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The whole #lovestarbicyclebags family out for a lakefront ride tonight! #adventuredad #futurecyclist #babysnub #striderbikes #bicycle #cycling #thulechariot #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000308.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000742.jpg" title="Springy sunrise ride. Last man of our group this morning riding away in the background. I love how rides grow and crescendo to the coffee shop and then slowly one by one split and fade until you solo home. #cycling #cyclist #bicycle #lovestarfactoryteam #bikechi #moots #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Springy sunrise ride. Last man of our group this morning riding away in the background. I love how rides grow and crescendo to the coffee shop and then slowly one by one split and fade until you solo home. #cycling #cyclist #bicycle #lovestarfactoryteam #bikechi #moots #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000742.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000743.jpg" title="Sunrise ride. #moots #cycling #bicycle #bikechi #lovestarfactoryteam #cyclist #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. #moots #cycling #bicycle #bikechi #lovestarfactoryteam #cyclist #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000743.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000744.jpg" title="Spoils of war. #cycling #cyclist #bikechi #bicycle #thebonebell #lovestarfactoryteam #arrivadolce" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Repost from @theandyhudson . Amazing crew out for a night ride with the #lovestarfactoryteam . Some excellent miles on quiet roads with awesome people ending with some fine brews. Look for some of these killers out at the Chicago cross cup series this fall! #lovestarbicyclebags #cycling #cyclocross #nightride #bicycle #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000316.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000752.jpg" title="#LoveStarFactoryTeam #LSB #NightRide #KnightRider" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#LoveStarFactoryTeam #LSB #NightRide #KnightRider</small>
-                           </div>
-                           <img src="../lsphotos/image000752.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000753.jpg" title="#lovestarfactoryteam #nightride @piliu7 @elliotlovestarbicycles @jobywankenoby @theandyhudson" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#lovestarfactoryteam #nightride @piliu7 @elliotlovestarbicycles @jobywankenoby @theandyhudson</small>
-                           </div>
-                           <img src="../lsphotos/image000753.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000317.jpg" title="Getting charged for a team night ride tonight. #cycling #fatbike #bicycle #nightride #lovestarbicyclebags #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Getting charged for a team night ride tonight. #cycling #fatbike #bicycle #nightride #lovestarbicyclebags #lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000317.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000318.jpg" title="Worked my 8th #bikethedrive this morning. Some of the SWAG matches my kit almost too well. #cycling #bikechi #lovestarbicyclebags #bicycle #bikecommute #REIvillage" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Worked my 8th #bikethedrive this morning. Some of the SWAG matches my kit almost too well. #cycling #bikechi #lovestarbicyclebags #bicycle #bikecommute #REIvillage</small>
-                           </div>
-                           <img src="../lsphotos/image000318.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
