--- a/instagram4.html
+++ b/instagram4.html
@@ -6,6 +6,60 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000876.jpg" title="Quick post drive shake down with Fausto Coppi .... this man is pure style. #faustocoppi #bicycle #gravelbike #gravel #barryroubaix #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Quick post drive shake down with Fausto Coppi .... this man is pure style. #faustocoppi #bicycle #gravelbike #gravel #barryroubaix #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000876.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000875.jpg" title="Barry shakedown 
+#lovestarraceclub #barryroubaix2017" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Barry shakedown 
+#lovestarraceclub #barryroubaix2017</small>
+                           </div>
+                           <img src="../lsphotos/image000875.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000871.jpg" title="Stop #1 on the #lovestarraceclub #barryroubaix2017 tour..." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Stop #1 on the #lovestarraceclub #barryroubaix2017 tour...</small>
+                           </div>
+                           <img src="../lsphotos/image000871.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000873.jpg" title="#LovestarRaceClub off to Barry Roubaix! @ridecannondale @missionworkshop @lazersport @barryroubaix1" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#LovestarRaceClub off to Barry Roubaix! @ridecannondale @missionworkshop @lazersport @barryroubaix1</small>
+                           </div>
+                           <img src="../lsphotos/image000873.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000872.jpg" title="@ddave12000 instagramming. #barrybound #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>jim_ftw</h4>
@@ -207,58 +261,6 @@
                               <small>Powder day! #lovestarraceclub #fatbike #cycling #bicycle #snowbike #bikewinter #adventurebike</small>
                            </div>
                            <img src="../lsphotos/image000869.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000855.jpg" title="I found a bit of urban adventure this afternoon. #lovestarraceclub #ridecannondale #superx #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>I found a bit of urban adventure this afternoon. #lovestarraceclub #ridecannondale #superx #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000855.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000854.jpg" title="Chilly windy ride w/ @oliviabeaty this morning. Single digit temps made better by @backlotcoffee and donuts #lovestarraceclub #bluebicycleclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Chilly windy ride w/ @oliviabeaty this morning. Single digit temps made better by @backlotcoffee and donuts #lovestarraceclub #bluebicycleclub</small>
-                           </div>
-                           <img src="../lsphotos/image000854.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000853.jpg" title="Rear View Mirror. #cycling #bicycle #dadlife #clearybikes #siblings #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Rear View Mirror. #cycling #bicycle #dadlife #clearybikes #siblings #lilshredder #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000853.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000850.jpg" title="Gravel Time. #lovestarraceclub #bicycle #cycling #ridecannondale #superX #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gravel Time. #lovestarraceclub #bicycle #cycling #ridecannondale #superX #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000850.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
