--- a/instagram46.html
+++ b/instagram46.html
@@ -1,3 +1,60 @@
+
+<div class="container">
+    <div class="row">
+        <div class="instagram-items ig-items">
+
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000511.jpg" title="Haven't been able to get a whole lot of work done lately...so it felt good to finally sit down and make up this bag for a friend. Stealthy black with a bit of red flash on the inside. #lovestarbicyclebags #bikepacking #handmade #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Haven't been able to get a whole lot of work done lately...so it felt good to finally sit down and make up this bag for a friend. Stealthy black with a bit of red flash on the inside. #lovestarbicyclebags #bikepacking #handmade #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000511.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000512.jpg" title="The Lovestar workbench. Every single Lovestar bag has been made using one of these two machines. The black one is a 1948 Singer featherweight 221-1 that was originally an engagement present from my grandfather to my grandmother. The white machine is a 1963 Singer Feather weight 221K and belonged to my other grandmother. When you buy a handmade product, you are able to own something that has a story all it's own before it even gets used. Every Lovestar product is Steeped in my own family history just by the nature of the tools I use. As a craftsman, these tools give me an enormous connection to the bags I make, and offers a intimate and personal touch to my work that makes every Lovestar big unique. #handmade #lovestarbicyclebags #singer #bikebpacking #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Lovestar workbench. Every single Lovestar bag has been made using one of these two machines. The black one is a 1948 Singer featherweight 221-1 that was originally an engagement present from my grandfather to my grandmother. The white machine is a 1963 Singer Feather weight 221K and belonged to my other grandmother. When you buy a handmade product, you are able to own something that has a story all it's own before it even gets used. Every Lovestar product is Steeped in my own family history just by the nature of the tools I use. As a craftsman, these tools give me an enormous connection to the bags I make, and offers a intimate and personal touch to my work that makes every Lovestar big unique. #handmade #lovestarbicyclebags #singer #bikebpacking #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000512.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000513.jpg" title="Lovestar Bicycle Bags...dreams to reality. #lovestarbicyclebags #bikepacking #handmade #custom #gravel #gravelgrinder #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Bicycle Bags...dreams to reality. #lovestarbicyclebags #bikepacking #handmade #custom #gravel #gravelgrinder #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000513.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000514.jpg" title="SNEEK PEEK! For those who are adherent to &quot;the Rules&quot; or those who just want to carry the essentials...meet the Lovestar Ride Wallet. No need for a bag on your bike. It will keep your jersey pockets organized and you valuable bits sweat free. More details about these on the way soon... #handmade #cycling #lovestarbicyclebags #therules" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>SNEEK PEEK! For those who are adherent to "the Rules" or those who just want to carry the essentials...meet the Lovestar Ride Wallet. No need for a bag on your bike. It will keep your jersey pockets organized and you valuable bits sweat free. More details about these on the way soon... #handmade #cycling #lovestarbicyclebags #therules</small>
+                           </div>
+                           <img src="../lsphotos/image000514.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
@@ -206,29 +263,4 @@
                   </div>
               </div>
           </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000531.jpg" title="I love supporting friends and their projects. A fantastic handmade Cordura saddle bag made by @elliotlovestarbicycles in Chicago. Check out his Etsy page for more great products. Thanks, Elliot! #bikechi #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>thatphilbirdkid</h4>
-                              <small>I love supporting friends and their projects. A fantastic handmade Cordura saddle bag made by @elliotlovestarbicycles in Chicago. Check out his Etsy page for more great products. Thanks, Elliot! #bikechi #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000531.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000532.jpg" title="Hey my bicycle rider friends check out love star! He makes some bad ass bags for your bicycles!! #chicago #bikeride #bikebags #wickerpark #logansquare #bucktown #bikeridingseason #cyclinggear #lovestarbicyclebags @elliotlovestarbicycles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>my_wife_doesntknow</h4>
-                              <small>Hey my bicycle rider friends check out love star! He makes some bad ass bags for your bicycles!! #chicago #bikeride #bikebags #wickerpark #logansquare #bucktown #bikeridingseason #cyclinggear #lovestarbicyclebags @elliotlovestarbicycles</small>
-                           </div>
-                           <img src="../lsphotos/image000532.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
+<div class="scroll"><center><a href="instagram47.html" class="next">Next Page</a></center>
